fix kebutuhan hide scrollbar and add endpoint filter

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,9 @@ body {
     text-wrap: balance;
   }
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;     /* Firefox */
+}
+
